--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   },
   "homepage": "https://github.com/Russe11/prmq#readme",
   "dependencies": {
-    "amqplib": "^0.5.1",
-    "bluebird": "^3.5.0"
+    "amqplib": "^0.5.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
