--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   },
   "homepage": "https://github.com/Russe11/prmq#readme",
   "dependencies": {
-    "amqplib": "^0.5.1"
+    "amqplib": "^0.5.1",
+    "bluebird": "^3.5.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "eslint": "^4.6.1",
+    "eslint-config-airbnb-base": "^12.0.0",
+    "eslint-plugin-import": "^2.7.0",
     "mocha": "^3.5.0"
   }
 }
