--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Promise Based AMPQ Wrapper for JS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha *.tests.js --timeout 40000"
   },
   "repository": {
     "type": "git",
