--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "prmq",
   "version": "0.2.0",
   "description": "Promise Based AMPQ Wrapper for JS",
-  "main": "index.js",
+  "main": "distribution/index.js",
   "scripts": {
-    "test": "mocha *.tests.js --timeout 6000"
+    "test": "mocha *.tests.js --timeout 6000",
+    "build": "babel index.js lib/* --presets babel-preset-es2015 --out-dir dist"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,8 @@
     "bluebird": "^3.5.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.2",
     "eslint": "^4.6.1",
     "eslint-config-airbnb-base": "^12.0.0",
