--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "prmq",
   "version": "0.2.0",
   "description": "Promise Based AMPQ Wrapper for JS",
-  "main": "distribution/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "mocha *.tests.js --timeout 6000",
-    "build": "babel index.js lib/* --presets babel-preset-es2015 --out-dir dist"
+    "build": "babel index.js lib/* --presets babel-preset-env --out-dir dist"
   },
   "repository": {
     "type": "git",
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "chai": "^4.1.2",
     "eslint": "^4.6.1",
     "eslint-config-airbnb-base": "^12.0.0",
