Added Node 6.x support

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,6 @@
 {
   "presets": [
-    ["env", {
-      "targets": {
-        "node": "current"
-      }
-    }]
-  ]
+    "node6"
+  ],
+  "plugins": ["transform-async-to-generator"]
 }
