--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Promise Based AMPQ Wrapper for JS",
   "main": "dist/index.js",
   "scripts": {
-    "test": "mocha *.tests.js dist/*.tests.js --timeout 6000",
+    "test": "npm run build && mocha *.tests.js dist/*.tests.js --timeout 6000",
     "build": "babel exchange.tests.js lib/* --out-dir dist"
   },
   "repository": {
