--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ coverage
 # nyc test coverage
 .nyc_output
 
+dist/
+
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
