--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Promise Based AMPQ Wrapper for JS",
   "main": "dist/index.js",
   "scripts": {
-    "test": "npm run build && mocha dist/*.tests.js --timeout 6000",
+    "test": "npm run build && istanbul cover ./node_modules/mocha/bin/_mocha dist/*.tests.js --timeout 6000 --report lcovonly -- -R spec && codecov",
     "build": "babel index.js exchange.tests.js lib/* --out-dir dist"
   },
   "repository": {
@@ -34,6 +34,7 @@
     "eslint": "^4.6.1",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.7.0",
+    "istanbul": "^0.4.5",
     "mocha": "^3.5.0"
   }
 }
