--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-node6": "^11.0.0",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "codecov": "^2.3.0",
     "eslint": "^4.6.1",
     "eslint-config-airbnb-base": "^12.0.0",
