--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "rm -rf dist && npm run build && istanbul cover ./node_modules/mocha/bin/_mocha dist/**/*.tests.js --timeout 6000 --report lcovonly -- -R spec && codecov",
-    "build": "babel index.js tests/* lib/* --out-dir dist"
+    "build": "babel index.js tests/* lib/* --out-dir dist",
+    "install": "babel index.js lib/* --out-dir dist"
   },
   "repository": {
     "type": "git",
