--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bluebird": "^3.5.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-node6": "^11.0.0",
