--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "prmq",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "Promise Based AMPQ Wrapper for JS",
   "main": "dist/index.js",
   "scripts": {
     "test": "rm -rf dist && npm run build && istanbul cover ./node_modules/mocha/bin/_mocha dist/**/*.tests.js --timeout 6000 --report lcovonly -- -R spec && codecov",
     "build": "babel index.js tests/* lib/* --out-dir dist",
-    "postinstall": "babel index.js lib/* --out-dir dist"
+    "install": "babel index.js lib/* --out-dir dist"
   },
   "repository": {
     "type": "git",
