--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "Promise Based AMPQ Wrapper for JS",
   "main": "dist/index.js",
   "scripts": {
-    "test": "rm -rf dist && npm run build && istanbul cover ./node_modules/mocha/bin/_mocha dist/**/*.tests.js --timeout 6000 --report lcovonly -- -R spec && codecov",
-    "build": "babel index.js tests/* lib/* --out-dir dist",
-    "install": "babel index.js lib/* --out-dir dist"
-  },
+    "test": "rm -rf dist && babel index.js tests/* lib/* --out-dir dist && istanbul cover ./node_modules/mocha/bin/_mocha dist/**/*.tests.js --timeout 6000 --report lcovonly -- -R spec && codecov",
+    "build": "babel index.js lib/* --out-dir dist",
+    "postinstall": "postinstall-build dist",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Russe11/prmq.git"
@@ -24,7 +23,8 @@
   "dependencies": {
     "amqplib": "^0.5.1",
     "babel-polyfill": "^6.26.0",
-    "bluebird": "^3.5.0"
+    "bluebird": "^3.5.0",
+    "postinstall-build": "^5.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -39,5 +39,11 @@
     "eslint-plugin-import": "^2.7.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.5.0"
-  }
+  },
+  "buildDependencies": [
+    "babel-cli",
+    "babel-core",
+    "babel-preset-env",
+    "babel-preset-node6"
+  ]
 }
