--- a/package.json
+++ b/package.json
@@ -1,49 +1,3 @@
 {
-  "name": "prmq",
-  "version": "0.3.4",
-  "description": "Promise Based AMPQ Wrapper for JS",
-  "main": "dist/index.js",
-  "scripts": {
-    "test": "rm -rf dist && babel index.js tests/* lib/* --out-dir dist && istanbul cover ./node_modules/mocha/bin/_mocha dist/**/*.tests.js --timeout 6000 --report lcovonly -- -R spec && codecov",
-    "build": "babel index.js lib/* --out-dir dist",
-    "postinstall": "postinstall-build dist",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Russe11/prmq.git"
-  },
-  "keywords": [
-    "RabbitMQ"
-  ],
-  "author": "Russell Lewis (russlewis@gmail.com)",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Russe11/prmq/issues"
-  },
-  "homepage": "https://github.com/Russe11/prmq#readme",
-  "dependencies": {
-    "amqplib": "^0.5.1",
-    "babel-polyfill": "^6.26.0",
-    "bluebird": "^3.5.0",
-    "postinstall-build": "^5.0.1"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-node6": "^11.0.0",
-    "chai": "^4.1.2",
-    "chai-as-promised": "^7.1.1",
-    "codecov": "^2.3.0",
-    "eslint": "^4.6.1",
-    "eslint-config-airbnb-base": "^12.0.0",
-    "eslint-plugin-import": "^2.7.0",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.5.0"
-  },
-  "buildDependencies": [
-    "babel-cli",
-    "babel-core",
-    "babel-preset-env",
-    "babel-preset-node6"
-  ]
+  "version": "0.3.5"
 }
