--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.5.3",
     "tslint": "^5.7.0",
+    "tslint-microsoft-contrib": "^5.0.1",
     "typescript": "^2.5.2"
   }
 }
