Fixed bad test assertions

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "prmq",
   "version": "0.3.6",
   "description": "Promise Based AMPQ Wrapper for JS",
-  "main": "dist/index.js",
+  "main": "dist/PRMQ.js",
   "scripts": {
     "test": "rm -rf dist && tsc && istanbul cover ./node_modules/mocha/bin/_mocha dist/**/*.tests.js --timeout 6000 --report lcovonly -- -R spec && codecov",
     "build": "rm -rf dist && tsc",
