--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Promise Based AMPQ Wrapper for JS",
   "main": "dist/PRMQ.js",
   "scripts": {
-    "test": "rm -rf dist && tsc && istanbul cover ./node_modules/mocha/bin/_mocha dist/**/*.tests.js --timeout 6000 --report lcovonly -- -R spec && codecov",
-    "build": "rm -rf dist && tsc",
+    "test": "nyc mocha --require ts-node/register src/**/*.tests.ts --timeout 6000",
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov",
+    "build": "rm -rf dist && tsc src/lib/*",
     "prepublishOnly": "tsc"
   },
   "repository": {
@@ -23,7 +24,6 @@
   "homepage": "https://github.com/Russe11/prmq#readme",
   "dependencies": {
     "amqplib": "^0.5.1",
-    "babel-polyfill": "^6.26.0",
     "bluebird": "^3.5.0",
     "debug": "^3.0.1"
   },
@@ -37,11 +37,12 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "codecov": "^2.3.0",
-    "eslint": "^4.7.0",
+    "eslint": "^4.7.1",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.7.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.5.3",
+    "nyc": "^11.2.1",
     "tslint": "^5.7.0",
     "tslint-microsoft-contrib": "^5.0.1",
     "typescript": "^2.5.2"
