--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,11 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
-    "lib": ["es5", "es6", "es7"],
+    "lib": ["es5", "es6", "es7", "es2015", "es2015.promise"],
     "declaration": true,
     "outDir": "./dist"
   },
   "include": [
-    "src/**/*"
+    "**/*.ts"
   ]
 }
