--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "nyc mocha --require ts-node/register src/**/*.tests.ts --timeout 6000",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov",
     "postinstall": "postinstall-build lib --script build",
-    "build": "rm -rf dist && tsc",
+    "build": "rm -rf dist && tsc -p tsconfig.json",
     "prepublishOnly": "tsc"
   },
   "repository": {
