--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov",
     "postinstall": "postinstall-build lib --script buildProd",
     "build": "rm -rf dist && tsc -p ./tsconfig.json",
-    "buildProd": "tsc -p tsconfig.json",
+    "buildProd": "tsc -p ./tsconfig.json",
     "prepublishOnly": "tsc"
   },
   "repository": {
