--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "prmq",
   "version": "0.4.6",
   "description": "Promise Based AMPQ Wrapper for JS",
-  "main": "dist/lib/PRMQ.js",
+  "main": "dist/PRMQ.js",
   "scripts": {
     "test": "nyc mocha --require ts-node/register src/**/*.tests.ts --timeout 6000",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov",
     "postinstall": "postinstall-build lib --script buildProd",
     "build": "rm -rf dist && tsc -p ./tsconfig.json",
-    "buildProd": "tsc -p ./tsconfig.json",
+    "buildProd": "tsc src/PRMQ.ts --target es5 --lib ES2015 --outDir dist",
     "prepublishOnly": "tsc"
   },
   "repository": {
