try to specify types in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "commonjs",
     "target": "es5",
     "lib": ["es5", "es6", "es7", "es2015", "es2015.promise"],
+    "types" : ["node", "lodash", "express"]
     "declaration": true,
     "outDir": "./dist"
   },
