--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "moduleResolution": "node",
     "target": "es5",
     "lib": ["es5", "es6", "es7", "es2015", "es2015.promise"],
     "types" : ["chai", "amqplib", "bluebird", "chai", "chai-as-promised", "mocha", "node"],
